# etl-test

./: .env.example  Dockerfile  Jenkinsfile  pyproject.toml
public/: extract.csv
public/bronze_delta/: .part-00000-c8a79e35-2cfa-436e-a1b1-6cdc03318e77-c000.snappy.parquet.crc  part-00000-c8a79e35-2cfa-436e-a1b1-6cdc03318e77-c000.snappy.parquet
public/bronze_delta/_delta_log/: .00000000000000000000.crc.crc  .00000000000000000000.json.crc
public/leading_parquet/: .part-00000-d525a38b-a5c6-41f6-a3f3-506bc6f98b75-c000.snappy.parquet.crc  part-00000-d525a38b-a5c6-41f6-a3f3-506bc6f98b75-c000.snappy.parquet
public/silver_delta/dim_orders/: .part-00000-b6077251-4f88-44ab-a8e9-c815287e516c-c000.snappy.parquet.crc  part-00000-b6077251-4f88-44ab-a8e9-c815287e516c-c000.snappy.parquet
public/silver_delta/dim_orders/_delta_log/: .00000000000000000000.crc.crc  .00000000000000000000.json.crc
public/silver_delta/fact_address/: .part-00000-fc6c0f20-99bc-4689-8c1d-df1c460798f9-c000.snappy.parquet.crc  part-00000-fc6c0f20-99bc-4689-8c1d-df1c460798f9-c000.snappy.parquet
public/silver_delta/fact_product/: .part-00000-a056a240-b929-43a1-abf6-8c77a907313e-c000.snappy.parquet.crc  part-00000-a056a240-b929-43a1-abf6-8c77a907313e-c000.snappy.parquet
public/silver_delta/fact_user/: .part-00000-238da68c-52ec-4997-aa7a-2b24226b0988-c000.snappy.parquet.crc  part-00000-238da68c-52ec-4997-aa7a-2b24226b0988-c000.snappy.parquet
src/etl/: extract.py  load.py  transform_bronze.py  transform_gold.py  transform_leading.py  transform_silver.py
src/etl/config/: config.py
(+28 files in other folders)
