[project]
name = "etl"
version = "0.1.0"
description = "ETL process for data transformation"
authors = ["Vitor <vitor.rosa@innovaconnect.com.br>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    { name = "pyspark", version = ">=3.5.5,<4.0.0" },
    { name = "dotenv", version = ">=0.9.9,<0.10.0" },
    { name = "psycopg2", version = ">=2.9.10,<3.0.0" },
    { name = "delta-spark", version = ">=3.3.0,<4.0.0" }
]

[tool.poetry]
packages = [{include = "etl", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"