[project]
name = "etl"
version = "0.1.0"
description = "ETL"
authors = [
    {name = "Vitor",email = "vitor.rosa@innovaconnect.com.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark (>=3.5.5,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "delta-spark (>=3.3.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "etl", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
